<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_background">


        <View
            android:id="@+id/bacgroundView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/crdDetailPressure"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.cardview.widget.CardView
            android:id="@+id/crdDetailPressure"
            android:layout_width="0dp"
            android:layout_height="105dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="72dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/crdDetailWind"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_pressure"
                    tools:ignore="contentDescription"/>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="5dp"/>

                    <TextView
                        android:id="@+id/txtPressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/pressure_sym" />
                </androidx.appcompat.widget.LinearLayoutCompat>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_pressure" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/crdDetailWind"
            android:layout_width="0dp"
            android:layout_height="105dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/crdDetailPressure"
            app:layout_constraintEnd_toStartOf="@+id/crdDetailHumidity"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/crdDetailPressure"
            app:layout_constraintTop_toTopOf="@+id/crdDetailPressure">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_wind"
                    tools:ignore="contentDescription"/>


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="5dp" />

                    <TextView
                        android:id="@+id/txtWind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/wind_sym" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_wind" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/crdDetailHumidity"
            android:layout_width="0dp"
            android:layout_height="105dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/crdDetailWind"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/crdDetailWind"
            app:layout_constraintTop_toTopOf="@+id/crdDetailWind">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_humidity"
                    tools:ignore="contentDescription"/>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="5dp" />

                    <TextView
                        android:id="@+id/txtHumidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/humidity_sym" />
                </androidx.appcompat.widget.LinearLayoutCompat>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_humidity" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txtTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="72sp"
            app:layout_constraintBottom_toTopOf="@+id/txtState"
            app:layout_constraintEnd_toEndOf="@+id/crdDetailPressure"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/crdDetailPressure" />

        <TextView
            android:id="@+id/tempSymb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_sym"
            android:textSize="26sp"
            app:layout_constraintStart_toEndOf="@+id/txtTemperature"
            app:layout_constraintTop_toTopOf="@+id/txtTemperature" />

        <TextView
            android:id="@+id/txtState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/bacgroundView"
            app:layout_constraintStart_toEndOf="@+id/txtTemperature"
            app:layout_constraintStart_toStartOf="@+id/txtTemperature" />

        <ImageView
            android:id="@+id/imgDetailState"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_01d"
            app:layout_constraintBottom_toTopOf="@+id/tempSymb"
            app:layout_constraintEnd_toEndOf="@+id/crdDetailHumidity"
            tools:ignore="contentDescription"/>

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="@+id/txtDate"
            app:layout_constraintStart_toStartOf="@+id/txtDate"
            app:layout_constraintTop_toBottomOf="@+id/txtDate" />

        <TextView
            android:id="@+id/txtFeelsLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/feels"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imgDetailState"
            app:layout_constraintStart_toStartOf="@+id/imgDetailState"
            app:layout_constraintTop_toBottomOf="@+id/imgDetailState" />

        <TextView
            android:id="@+id/txtFeels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/txtFeelsLike"
            app:layout_constraintStart_toStartOf="@+id/txtFeelsLike"
            app:layout_constraintTop_toBottomOf="@+id/txtFeelsLike" />

        <TextView
            android:id="@+id/feelsSymb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feels_sym"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/txtFeels"
            app:layout_constraintTop_toBottomOf="@+id/txtFeelsLike" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>